# CppProject

./: CMakeLists.txt  Catch2_submodule.cmake  README.md  StrictCompilerSettings.cmake
cli/: main.cpp
include/: command_parser.hpp  command_processor.hpp  database.hpp  row_filter.hpp  schema.hpp  table.hpp  util.hpp  value.hpp
src/: command_parser.cpp  command_processor.cpp  database.cpp  row_filter.cpp  table.cpp  value.cpp
tests/: command_parsing.test.cpp  database.test.cpp  integration.test.cpp  main.test.cpp  test_helpers.cpp  test_helpers.hpp
